<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAlertDialogSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@string/font1"
        android:text="Symbol"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPriceAlertCryptoDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/low_percent_for_alert"
        android:fontFamily="@string/font2"
        android:textSize="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <!--        High for alert -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@string/font2"
                android:text="@string/high_price_for_alert" />

            <EditText
                android:id="@+id/etHighPriceForAlert"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/high_price_hint"
                android:inputType="numberDecimal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        Low for alert-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@string/font2"
                android:text="@string/low_price_for_alert" />

            <EditText
                android:id="@+id/etLowPriceForAlert"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/low_price_hint"
                android:inputType="numberDecimal" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--    High percent for alert-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <!-- High for alert -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_percent_for_alert"
                android:fontFamily="@string/font2"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/etHighPercentForAlert"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/high_percent_hint"
                android:inputType="numberDecimal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Low percent for alert -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/low_percent_for_alert"
                android:fontFamily="@string/font2"
                android:textSize="10dp" />

            <EditText
                android:id="@+id/etLowPercentForAlert"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/low_percent_hint"
                android:inputType="numberDecimal" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="Alert Type"
        android:fontFamily="@string/font1"
        android:textSize="17dp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:checked="true"
            android:fontFamily="@string/font2"
            android:text="Voice" />

        <RadioButton
            android:id="@+id/rbPopupWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:fontFamily="@string/font2"
            android:text="Popup window" />

        <RadioButton
            android:id="@+id/rbCommandWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:fontFamily="@string/font2"
            android:text="Command window" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#000" />

    <Button
        android:id="@+id/btnSaveAlert"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@string/font1"
        android:text="@string/save" />

</androidx.appcompat.widget.LinearLayoutCompat>